correção duplicidade combo pavimento

--- a/chamadoscmc/templates/core/new.html
+++ b/chamadoscmc/templates/core/new.html
@@ -35,7 +35,7 @@
 		atualizaGrupoServico();
 		//atualizaServico();
 		atualizaLocalizacao();
-		atualizaPavimento();
+		//atualizaPavimento();
 
 		$('#id_setor').on('change', function() {
             atualizaGrupoServico();    
