adicionado titulo nos cadastros

--- a/chamadoscmc/templates/core/cadastro/grupo_servico/update.html
+++ b/chamadoscmc/templates/core/cadastro/grupo_servico/update.html
@@ -1,6 +1,7 @@
 {% extends "base.html" %}
 {% load crispy_forms_tags %}
 
+{% block title %}Alteração de Grupo de Serviço{% endblock %}
 
 {% block content %}
 
