--- a/chamadoscmc/templates/core/cadastro/setor/index.html
+++ b/chamadoscmc/templates/core/cadastro/setor/index.html
@@ -1,7 +1,7 @@
 {% extends "base.html" %}
 {% load crispy_forms_tags %}
 
-{% block title %}{% endblock %}
+{% block title %}Manutenção de Setores{% endblock %}
 
 {% block content %}
 
