--- a/chamadoscmc/templates/core/cadastro/setor/update.html
+++ b/chamadoscmc/templates/core/cadastro/setor/update.html
@@ -1,7 +1,7 @@
 {% extends "base.html" %}
 {% load crispy_forms_tags %}
 
-{% block title %}{% endblock %}
+{% block title %}Alteração de Setor{% endblock %}
 
 {% block content %}
 	<div class="panel panel-primary">
