--- a/chamadoscmc/templates/core/new.html
+++ b/chamadoscmc/templates/core/new.html
@@ -17,7 +17,7 @@
 		<div class="panel-body">
 	    	<div class="col-md-12 row">
 	    		<input type="button" onclick="javascript:volta_fila();" value="Voltar à fila" class="btn btn-default"/> 
-				<button type="button" class="btn btn-primary" onclick="javascript:salvarChamado();">Salvar</button>
+					<button type="button" id="btSalvar" class="btn btn-primary" onclick="javascript:salvarChamado();">Salvar</button>
 	    	</div>
 	    </div>
 	</div>
@@ -57,6 +57,7 @@
             initialPreviewAsData: true,
             overwriteInitial: false,
         });
+		$('#btSalvar').attr('enabled', true);		
 	});
 
 	function atualizaGrupoServico() {
@@ -120,7 +121,6 @@
 				    toAppend = '<option value="0">----------</option>'
                 }
                 */
-                console.log(toAppend);
                 $('#id_servico').append(toAppend);
                 setaPatrimonio();
 
@@ -139,6 +139,7 @@
     }
 
     function salvarChamado() {
+			$('#btSalvar').attr('disabled', true);
     	$('#formulario').submit();
     }
 
