ajuste ordenação default

--- a/chamadoscmc/templates/fila/index.html
+++ b/chamadoscmc/templates/fila/index.html
@@ -94,6 +94,7 @@
                 rowReorder: {
                     selector: 'td:nth-child(2)'
                 },
+                order: [[ 0, "asc" ]],
 				responsive: true,
 				"columns": [
 					{ 
