codigo para permitir anexar arquivos pdf

--- a/chamadoscmc/templates/core/new.html
+++ b/chamadoscmc/templates/core/new.html
@@ -51,7 +51,7 @@
             language: "pt-BR",
             showUpload: false, 
             showPreview: true,
-            allowedFileExtensions: ["jpg", "png", "gif", "jpeg"],
+            allowedFileExtensions: ["jpg", "png", "gif", "jpeg", "pdf"],
             maxFileSize: 5000,
             maxFileCount: 3,
             initialPreviewAsData: true,
