--- a/chamadoscmc/templates/core/edit.html
+++ b/chamadoscmc/templates/core/edit.html
@@ -1,5 +1,6 @@
 {% extends "base.html" %}
 {% load crispy_forms_tags %}
+{% load file_util %}
 
 {% block title %}Atualização de Chamados{% endblock %}
 
@@ -560,7 +561,7 @@
             showBrowse: false,
             showPreview: true,
             showCaption: false,
-            allowedFileExtensions: ["jpg", "png", "gif", "jpeg"],
+            allowedFileExtensions: ["jpg", "png", "gif", "jpeg", "pdf"],
             maxFileSize: 5000,
             maxFilesNum: 3,
             overwriteInitial: false,
@@ -570,8 +571,12 @@
                 {% for imagem in imagens %}
                     "/media/{{ imagem.arquivo }}",
                 {% endfor %}
+            ],
+            initialPreviewConfig: [
+                {% for imagem in imagens %}
+                    {{ imagem | extensao }},
+                {% endfor %}
             ]
-
         });
 
         $('.selectpicker').selectpicker();
